--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,12 @@
     <link rel="styleshhet" href="styles.css">
 </head>
 <body>
+    <div class="header"></div>
+    <div class="section1"></div>
+    <div class="section2"></div>
+    <div class="section3"></div>
+    <div class="footer"></div>
+
     
 </body>
 </html>
