feat: add upper and lower header sections inside header

--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,10 @@
     <link rel="styleshhet" href="styles.css">
 </head>
 <body>
-    <div class="header"></div>
+    <div class="header">
+        <div class="upper-header"></div>
+        <div class="lower-header"></div>
+    </div>
     <div class="section1"></div>
     <div class="section2"></div>
     <div class="section3"></div>
