feat: add upper header right and left sections inside upper header

--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div class="header">
-        <div class="upper-header"></div>
+        <div class="upper-header">
+            <div class="upper-header-left"></div>
+            <div class="upper-header-right"></div>
+        </div>
         <div class="lower-header"></div>
     </div>
     <div class="section1"></div>
