--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,10 @@
             <div class="upper-header-left"></div>
             <div class="upper-header-right"></div>
         </div>
-        <div class="lower-header"></div>
+        <div class="lower-header">
+            <div class="lower-header-left"></div>
+            <div class="lower-header-right"></div>
+        </div>
     </div>
     <div class="section1"></div>
     <div class="section2"></div>
