feat: add three sections inside upper header right

--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,11 @@
     <div class="header">
         <div class="upper-header">
             <div class="upper-header-left"></div>
-            <div class="upper-header-right"></div>
+            <div class="upper-header-right">
+                <div class="UHR1"></div>
+                <div class="UHR2"></div>
+                <div class="UHR3"></div>
+            </div>
         </div>
         <div class="lower-header">
             <div class="lower-header-left"></div>
