feat: add three sections inside lower header left

--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,11 @@
             </div>
         </div>
         <div class="lower-header">
-            <div class="lower-header-left"></div>
+            <div class="lower-header-left">
+                <div class="LHL1"></div>
+                <div class="LHL2"></div>
+                <div class="LHL3"></div>
+            </div>
             <div class="lower-header-right"></div>
         </div>
     </div>
