feat:  add temporary placeholder text in the whole header section

--- a/index.htm
+++ b/index.htm
@@ -22,7 +22,9 @@
                 <div class="LHL2"></div>
                 <div class="LHL3"></div>
             </div>
-            <div class="lower-header-right"></div>
+            <div class="lower-header-right">
+                
+            </div>
         </div>
     </div>
     <div class="section1"></div>
