feat: add upper and lower sections inside section1

--- a/index.htm
+++ b/index.htm
@@ -9,25 +9,28 @@
 <body>
     <div class="header">
         <div class="upper-header">
-            <div class="upper-header-left"></div>
+            <div class="upper-header-left">Header Logo</div>
             <div class="upper-header-right">
-                <div class="UHR1"></div>
-                <div class="UHR2"></div>
-                <div class="UHR3"></div>
+                <div class="UHR1">header link one</div>
+                <div class="UHR2">header link two</div>
+                <div class="UHR3">header link three</div>
             </div>
         </div>
         <div class="lower-header">
             <div class="lower-header-left">
-                <div class="LHL1"></div>
-                <div class="LHL2"></div>
-                <div class="LHL3"></div>
+                <div class="LHL1">This website is awesome</div>
+                <div class="LHL2">This website has some subtext that goes here under the main title. it is a smaller font and the color is lower contrast</div>
+                <div class="LHL3">sign up</div>
             </div>
             <div class="lower-header-right">
-                
+               This is a placeholder for an image.
             </div>
         </div>
     </div>
-    <div class="section1"></div>
+    <div class="section1">
+        <div class="upper-section1"></div>
+        <div class="lower-section1"></div>
+    </div>
     <div class="section2"></div>
     <div class="section3"></div>
     <div class="footer"></div>
