--- a/index.htm
+++ b/index.htm
@@ -28,26 +28,26 @@
         </div>
     </div>
     <div class="section1">
-        <div class="upper-section1"></div>
+        <div class="upper-section1">Some random information.</div>
         <div class="lower-section1">
             <div class="box-container">
                 <div class="box"></div>
-                <p></p>
+                <p>This is some subtext under illustration or image.</p>
 
             </div>
             <div class="box-container">
                 <div class="box"></div>
-                <p></p>
+                <p>This is some subtext under illustration or image.</p>
 
             </div>
             <div class="box-container">
                 <div class="box"></div>
-                <p></p>
+                <p>This is some subtext under illustration or image.</p>
 
             </div>
             <div class="box-container">
                 <div class="box"></div>
-                <p></p>
+                <p>This is some subtext under illustration or image.</p>
 
             </div>
 
