--- a/index.htm
+++ b/index.htm
@@ -53,7 +53,9 @@
 
         </div>
     </div>
-    <div class="section2"></div>
+    <div class="section2">
+        <div class="quote-container"></div>
+    </div>
     <div class="section3"></div>
     <div class="footer"></div>
 
