--- a/index.htm
+++ b/index.htm
@@ -54,7 +54,10 @@
         </div>
     </div>
     <div class="section2">
-        <div class="quote-container"></div>
+        <div class="quote-container">
+            <div class="text-1"></div>
+            <div class="text-2"></div>
+        </div>
     </div>
     <div class="section3"></div>
     <div class="footer"></div>
