--- a/index.htm
+++ b/index.htm
@@ -55,8 +55,8 @@
     </div>
     <div class="section2">
         <div class="quote-container">
-            <div class="text-1"></div>
-            <div class="text-2"></div>
+            <div class="text-1">This is an inspiring quote or testimonial from acustomer. Maybe it's just filling up space, or maybe people actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="text-2">-Thor, God of Thunder</div>
         </div>
     </div>
     <div class="section3"></div>
