chore: add section inside section3

--- a/index.htm
+++ b/index.htm
@@ -59,7 +59,9 @@
             <div class="text-2">-Thor, God of Thunder</div>
         </div>
     </div>
-    <div class="section3"></div>
+    <div class="section3">
+        <div class="content-wrapper"></div>
+    </div>
     <div class="footer"></div>
 
     
