--- a/index.htm
+++ b/index.htm
@@ -60,7 +60,10 @@
         </div>
     </div>
     <div class="section3">
-        <div class="content-wrapper"></div>
+        <div class="content-wrapper">
+            <div class="content-left"></div>
+            <div class="content-right"></div>
+        </div>
     </div>
     <div class="footer"></div>
 
