chore: add two sections inside content left

--- a/index.htm
+++ b/index.htm
@@ -61,7 +61,10 @@
     </div>
     <div class="section3">
         <div class="content-wrapper">
-            <div class="content-left"></div>
+            <div class="content-left">
+                <div class="content-bold"></div>
+                <div class="normal-content"></div>
+            </div>
             <div class="content-right"></div>
         </div>
     </div>
