--- a/index.htm
+++ b/index.htm
@@ -65,7 +65,9 @@
                 <div class="content-bold"></div>
                 <div class="normal-content"></div>
             </div>
-            <div class="content-right"></div>
+            <div class="content-right">
+                <button></button>
+            </div>
         </div>
     </div>
     <div class="footer"></div>
