feat: add temporary placeholder text in the whole section3

--- a/index.htm
+++ b/index.htm
@@ -62,11 +62,11 @@
     <div class="section3">
         <div class="content-wrapper">
             <div class="content-left">
-                <div class="content-bold"></div>
-                <div class="normal-content"></div>
+                <div class="content-bold">Call to action! it's time!</div>
+                <div class="normal-content">Sign up for our product by clicking the button right over there.</div>
             </div>
             <div class="content-right">
-                <button></button>
+                <button>Sign up</button>
             </div>
         </div>
     </div>
