--- a/index.htm
+++ b/index.htm
@@ -70,7 +70,9 @@
             </div>
         </div>
     </div>
-    <div class="footer"></div>
+    <div class="footer">
+        Copyright © The Odin Project 2025
+    </div>
 
     
 </body>
