--- a/index.htm
+++ b/index.htm
@@ -23,7 +23,7 @@
                 <button class="LH3">Sign up</button>
             </div>
             <div class="lower-header-right">
-               This is a placeholder for an image.
+               <!--This is a placeholder for an image.--><img src="kalber.jpg" alt="image" width="500px" height="120px">
             </div>
         </div>
     </div>
