chore: rename button class to LHL3

--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,7 @@
             <div class="lower-header-left">
                 <div class="LHL1">This website is awesome</div>
                 <div class="LHL2">This website has some subtext that goes here under the main title. it is a smaller font and the color is lower contrast</div>
-                <button class="LH3">Sign up</button>
+                <button class="LHL3">Sign up</button>
             </div>
             <div class="lower-header-right">
                <!--This is a placeholder for an image.--><img src="kalber.jpg" alt="image" width="500px" height="120px">
