--- a/index.htm
+++ b/index.htm
@@ -8,19 +8,21 @@
 </head>
 <body>
     <div class="header">
+      
         <div class="upper-header">
             <div class="upper-header-left">Header Logo</div>
             <div class="upper-header-right">
                 <div class="UHR1">header link one</div>
                 <div class="UHR2">header link two</div>
                 <div class="UHR3">header link three</div>
-            </div>
+        </div>
+    
         </div>
         <div class="lower-header">
             <div class="lower-header-left">
                 <div class="LHL1">This website is awesome</div>
                 <div class="LHL2">This website has some subtext that goes here under the main title. it is a smaller font and the color is lower contrast</div>
-                <button class="LHL3">Sign up</button>
+                <button >Sign up</button>
             </div>
             <div class="lower-header-right">
                <!--This is a placeholder for an image.--><img src="kalber.jpg" alt="image" width="500px" height="120px">
@@ -31,22 +33,22 @@
         <div class="upper-section1">Some random information.</div>
         <div class="lower-section1">
             <div class="box-container">
-                <div class="box"></div>
+                <div class="box"> <!-- <img src="manche1.jpg" alt="mu1" width="180" height="200">--></div>
                 <p>This is some subtext under illustration or image.</p>
 
             </div>
             <div class="box-container">
-                <div class="box"></div>
+                <div class="box"> <!--<img src="manche2.jpg" alt="mu2" width="180" height="200"--> </div>
                 <p>This is some subtext under illustration or image.</p>
 
             </div>
             <div class="box-container">
-                <div class="box"></div>
+                <div class="box"> <!-- <img src="manche3.jpg" alt="mu3" width="180" height="200"> --> </div>
                 <p>This is some subtext under illustration or image.</p>
 
             </div>
             <div class="box-container">
-                <div class="box"></div>
+                <div class="box"> <!--<img src="manche4.jpg" alt="mu4" width="180" height="200"> --> </div>
                 <p>This is some subtext under illustration or image.</p>
 
             </div>
